--- a/inabox/templates/testconfig-anvil-nochurner.yaml
+++ b/inabox/templates/testconfig-anvil-nochurner.yaml
@@ -4,9 +4,9 @@ environment:
 
 deployers:
 - name: "default"
-  rpc: http://localhost:8545
+  rpc: http://0.0.0.0:8545
   verifyContracts: false
-  verifierUrl: http://localhost:4000/api
+  verifierUrl: http://0.0.0.0:4000/api
   deploySubgraphs: true
   slow: false
 
@@ -32,9 +32,9 @@ services:
   basePort: 32000
   variables:
     globals:
-      HOSTNAME: localhost
+      HOSTNAME: 0.0.0.0
       TIMEOUT: 20s
-      CHAIN_RPC: http://localhost:8545
+      CHAIN_RPC: http://0.0.0.0:8545
       CHAIN_ID: 40525
       G1_PATH: resources/kzg/g1.point
       G2_PATH: resources/kzg/g2.point
@@ -47,7 +47,7 @@ services:
       LOG_FORMAT: "text"
       VERBOSE: true
       NUM_CONNECTIONS: 50
-      AWS_ENDPOINT_URL: http://localhost:4570
+      AWS_ENDPOINT_URL: http://0.0.0.0:4570
       AWS_REGION: us-east-1
       AWS_ACCESS_KEY_ID: localstack
       AWS_SECRET_ACCESS_KEY: localstack
